===================================
Anderson Lite Changelog
===================================

Version 1.2.6
-----------------------------------
[moved] additional functions from functions.php to extras.php and template-tags.php
[added] theme support for Widget Bundle Addon Plugin

Version 1.2.5
-----------------------------------
[moved] register_widget functions to widgets_init action hook to fix widget translation
[improved] customizer sections to be translation-ready
[updated] German translation file

Version 1.2.4
-----------------------------------
[improved] code of 404.php and search.php templates
[improved] phrasing of all translatable text strings
[updated] translation files

Version 1.2.3
-----------------------------------
[fixed] deprecating PHP4 style constructors notices in WordPress 4.3

Version 1.2.2
-----------------------------------
[moved] featured content settings to post slider section in Customizer
[added] number of posts setting for the Featured Post Slider
[added] active_callback parameter to display slider controls only when slider is activated
[added] translation files for German

Version 1.2.1
-----------------------------------
[added] extra setting to enable grayscale filter on images
[fixed] styling of navigation on mobile devices
[updated] translation .pot file
[added] prefix to image sizes to follow wordpress.org review guidelines
=> you may have to regenerate your featured images: http://themezee.com/docs/regenerate-thumbnails-image-sizes/

Version 1.2 - Redesign
-----------------------------------
[removed] thumbnail navigation of post slideshow
[removed] grayscale image hover filter
[tweaked] styling of navigation and widgets
[changed] default color and screenshot.jpg
[changed] archive templates to use new the_archive_title() function

Version 1.1.4
-----------------------------------
[added] setting to display or hide post date
[added] setting to display or hide post author
[added] setting to display or hide post tags
