@@ -5,7 +5,6 @@
 // Load default style.css and Javascripts
 add_action('wp_enqueue_scripts', 'anderson_enqueue_scripts');
 
-if ( ! function_exists( 'anderson_enqueue_scripts' ) ):
 function anderson_enqueue_scripts() {
 
 	// Register and Enqueue Stylesheet
@@ -35,20 +34,16 @@ function anderson_enqueue_scripts() {
 
 	endif;
 	
+	// Register Comment Reply Script for Threaded Comments
+	if ( is_singular() && comments_open() && get_option( 'thread_comments' ) ) {
+		wp_enqueue_script( 'comment-reply' );
+	}
+
 	// Register and Enqueue Font
 	wp_enqueue_style('anderson-lite-default-fonts', anderson_fonts_url(), array(), null );
 
 }
-endif;
 
-// Load comment-reply.js if comment form is loaded and threaded comments activated
-add_action( 'comment_form_before', 'anderson_enqueue_comment_reply' );
-
-function anderson_enqueue_comment_reply() {
-	if( get_option( 'thread_comments' ) ) {
-		wp_enqueue_script( 'comment-reply' );
-	}
-}
 
 /*
 * Retrieve Font URL to register default Google Fonts
@@ -85,7 +80,6 @@ function anderson_fonts_url() {
 // Setup Function: Registers support for various WordPress features
 add_action( 'after_setup_theme', 'anderson_setup' );
 
-if ( ! function_exists( 'anderson_setup' ) ):
 function anderson_setup() {
 
 	// Set Content Width
@@ -114,12 +108,6 @@ function anderson_setup() {
 		'width'	=> 1200,
 		'height' => 350,
 		'flex-height' => true));
-	
-	// Add Theme Support for Anderson Pro Plugin
-	add_theme_support( 'anderson-pro' );
-	
-	// Add Theme Support for ThemeZee Addons
-	add_theme_support( 'themezee-widget-bundle' );
 
 	// Register Navigation Menus
 	register_nav_menu( 'primary', __('Main Navigation', 'anderson-lite') );
@@ -130,13 +118,11 @@ function anderson_setup() {
 	register_nav_menu( 'social', __('Social Icons', 'anderson-lite') );
 
 }
-endif;
 
 
 // Add custom Image Sizes
 add_action( 'after_setup_theme', 'anderson_add_image_sizes' );
 
-if ( ! function_exists( 'anderson_add_image_sizes' ) ):
 function anderson_add_image_sizes() {
 
 	// Add Custom Header Image Size
@@ -150,13 +136,11 @@ function anderson_add_image_sizes() {
 	add_image_size( 'anderson-slider-image', 880, 440, true);
 
 }
-endif;
 
 
 // Register Sidebars
 add_action( 'widgets_init', 'anderson_register_sidebars' );
 
-if ( ! function_exists( 'anderson_register_sidebars' ) ):
 function anderson_register_sidebars() {
 
 	// Register Sidebar
@@ -182,7 +166,6 @@ function anderson_register_sidebars() {
 	));
 	
 }
-endif;
 
 
 /*==================================== INCLUDE FILES ====================================*/
@@ -204,11 +187,14 @@ require( get_template_directory() . '/inc/template-tags.php' );
 // Include Extra Functions
 require get_template_directory() . '/inc/extras.php';
 
+// Include support functions for Theme Addons
+require get_template_directory() . '/inc/addons.php';
+
 // include Widget Files
 require( get_template_directory() . '/inc/widgets/widget-category-posts-boxed.php' );
 require( get_template_directory() . '/inc/widgets/widget-category-posts-columns.php' );
 require( get_template_directory() . '/inc/widgets/widget-category-posts-grid.php' );
 require( get_template_directory() . '/inc/widgets/widget-category-posts-horizontal.php' );
 
-// Include Featured Content class in case it does not exist yet (e.g. user has not Jetpack installed)
+// Include Featured Content class
 require get_template_directory() . '/inc/featured-content.php';
