@@ -6,6 +6,8 @@ Version 1.2.6
 -----------------------------------
 [moved] additional functions from functions.php to extras.php and template-tags.php
 [added] theme support for Widget Bundle Addon Plugin
+[removed] fallback solution for new title tag feature of WordPress
+[removed] function_exists wrappers for action hook functions
 
 Version 1.2.5
 -----------------------------------
